--- a/package.json
+++ b/package.json
@@ -16,20 +16,27 @@
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "express-router": "^0.0.1",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "mongoose-paginate-v2": "^1.8.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.5",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "twilio": "^5.3.3"
   }
 }
