Falta agregar errores del cartDetail y ver user admin

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT
 MONGO_URL
 PRIVATE_KEY
+PASS //la contrase;a de el email con el que se envia
+USER //el email de la acutentificacion en dos pasos
+TWILIO_ACOUNT_SID
+TWILIO_AUTH_TOKEN
+TWILIO_SMS_NUMBER
