--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch src/app.js"
+    "start": "node --watch ./src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -38,5 +38,8 @@
     "socket.io": "^4.7.5",
     "sweetalert2": "^11.6.13",
     "twilio": "^5.3.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
