ordenamos, simplificamos codigo y agrego .env info

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-PORT
-MONGO_URL
-PRIVATE_KEY
-PASS //la contrase;a de el email con el que se envia
-USER //el email de la acutentificacion en dos pasos
-TWILIO_ACOUNT_SID
-TWILIO_AUTH_TOKEN
-TWILIO_SMS_NUMBER
+PORT=8080
+MONGO_URL=mongodb+srv://facu12345:facu12345@cluster0.0zg4wjj.mongodb.net/coderbase?retryWrites=true&w=majority&appName=Cluster0
+PRIVATE_KEY=coder7070
+TWILIO_ACOUNT_SID = AC1a331d30574e49f0e3cab67f78e7310f
+TWILIO_AUTH_TOKEN=37fb479da8891504b9e7fa6d58b256f8
+TWILIO_SMS_NUMBER=+13053063234
+EMAIL=facundo.stazione@gmail.com
+USER_EMAIL=facundo.stazione@gmail.com
+USER_PASS=wcas rfhs okua jgfh
